fixed bugs with data quality score not showing in IE

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -8,11 +8,8 @@ $header-height: 50px;
 
 @import '~@code.gov/code-gov-style/_sass/_all.scss';
 
-/* overwrite code-gov-style */
+@import './overrides.scss';
 
-.banner {
-  background-image: none;
-}
 
 html {
   background: $color-white;
